--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ button:active { transform: scale(0.96); }
 </div>
 
 <script>
-const codes = ["22122024","22222222","33333333","44444444","55555555","66666666","77777777"];
-const link = "https://drive.google.com/file/d/1vhaOlp6Rkb_sRwVfPj40Y2pX1awiN5Y5/view?usp=drivesdk";
+const codes = ["22122024","25012025","33333333","44444444","55555555","66666666","77777777"];
+const link = "https://drive.google.com/file/d/1aLVoLgjvS0LAu7rkqGAzuPWksBLYPZuj/view?usp=sharing";
 
 function loadProgress(){ return JSON.parse(localStorage.getItem("progressCodes") || "[]"); }
 function saveProgress(p){ localStorage.setItem("progressCodes", JSON.stringify(p)); }
