--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>сайт для Сончки-Солншка</title>
+<title>сайтик для Сончки-Солншка</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
